--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <p>Mariana</p>
-
+<!--
 <div style="background: lightBlue">
-  VOTOS <br>
-  DESHABILITADOS <br>
-  HABILITADOS
+  <p>VOTOS: {{i}}</p>
+  <p>HABILITADOS: {{j}}</p>
+  <p>DESHABILITADOS: {{k}}</p> 
 </div>
 
 <div *ngFor="let alumno of alumnos">
@@ -16,3 +16,5 @@
   </app-prueba>
   <button (click)="alumno.voto = true">Votar</button>
   </div>
+  -->
+  <app-tarea *ngIf=""></app-tarea>
