--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,3 @@
-<p>Mariana</p>
-<!--
-<div style="background: lightBlue">
-  <p>VOTOS: {{i}}</p>
-  <p>HABILITADOS: {{j}}</p>
-  <p>DESHABILITADOS: {{k}}</p> 
-</div>
-
-<div *ngFor="let alumno of alumnos">
-  <div *ngIf="!alumno.voto" [ngStyle]="{'background': alumno.habilitado ? 'orange' : 'blue'}">
-    <app-prueba 
-      [nombre]="alumno.nombre" 
-      [apellido]="alumno.apellido" 
-      [habilitado]="alumno.habilitado" 
-      [nacimiento]="alumno.nacimiento">
-  </app-prueba>
-  <button (click)="alumno.voto = true">Votar</button>
-  </div>
-  -->
-
-<div style="border: 1px solid green" appNgFocus (enviar)="saved($event)">
-  ddd
-</div>
+<p>Routing</p>
 
 
