--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <p>Routing</p>
+<button routerLink="home">HOME</button>
+<button routerLink="about">ABOUT</button>
+<button routerLink="admin">ADMIN</button>
+
+
+<div style="border: 1px solid green">
+  <router-outlet></router-outlet>
+</div>
 
 
