--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,1 +1,7 @@
 <p>user works!</p>
+<button routerLink="user1" type="button" class="btn btn-warning">USER1</button>
+<button routerLink="user2">USER2</button>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
