--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
 <div>
   <router-outlet></router-outlet>
 </div>
+<mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider>
+<mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+
 
 <div class="btn-group btn-group-toggle">
   <label class="btn-primary" ngbButtonLabel>
