--- a/src/app/pages1/admin/admin/admin.component.html
+++ b/src/app/pages1/admin/admin/admin.component.html
@@ -1,5 +1,8 @@
 <p>admin works!</p>
 
+<mat-drawer-container class="example-container" style="width: 100%; height: 600px">
+  <mat-drawer #drawer class="example-sidenav" mode="side" style="width: 300px; height: 100%;" [position]="'end'">
+
 <div style="display: flex; flex-direction: column;">
   <form [formGroup]="productForm">
     <input formControlName="description" type="text"><br>
@@ -24,3 +27,35 @@
   </form>
 </div>
 <button (click)="onEnviar123()">enviar</button>
+
+</mat-drawer>
+
+<div class="example-sidenav-content">
+  <button type="button" mat-button (click)="drawer.toggle()">
+    Toggle sidenav
+  </button>
+</div>
+
+<div class="row">
+  <div *ngFor="let product of products" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4" style="padding: 50px; display: flex; justify-content: center;">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>{{product.title}}</mat-card-title>
+        <mat-card-subtitle>{{product.price}} Bs.</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image [src]="product.imageURL" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          {{product.description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>EDITAR</button>
+        <button mat-button>ELIMINAR</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
+
+
+</mat-drawer-container>
