--- a/src/app/pages1/admin/admin/admin.component.html
+++ b/src/app/pages1/admin/admin/admin.component.html
@@ -5,7 +5,10 @@
 
 <div style="display: flex; flex-direction: column;">
   <form [formGroup]="productForm">
-    <input formControlName="description" type="text"><br>
+    <mat-form-field>
+      <mat-label>Description</mat-label>
+      <input matInput formControlName="description" type="text">
+    </mat-form-field>
 
     <div *ngIf="productForm.get('description').invalid && (productForm.get('description').touched || productForm.get('description').dirty)" class="alert alert-danger">
 
@@ -20,14 +23,29 @@
       </div>
     </div>
 
-    <input formControlName="imageURL" type="text"><br>
-    <input formControlName="ownerId" type="text"><br>
-    <input formControlName="price" type="text"><br>
-    <input formControlName="title" type="text"><br>
+    <mat-form-field>
+      <mat-label>ImageURL</mat-label>
+      <input matInput formControlName="imageURL" type="text">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>OwnerId</mat-label>
+      <input matInput formControlName="ownerId" type="text">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Price</mat-label>
+      <input matInput formControlName="price" type="text">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Title</mat-label>
+      <input matInput formControlName="title" type="text">
+    </mat-form-field>
   </form>
 </div>
-<button (click)="onEnviar123()">enviar</button>
-
+<button (click)="onEnviar123()">CREAR</button>
+<button (click)="onUpdateProduct()">UPDATE</button>
 </mat-drawer>
 
 <div class="example-sidenav-content">
@@ -50,8 +68,8 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>EDITAR</button>
-        <button mat-button>ELIMINAR</button>
+        <button mat-button (click)="onEdit(product); drawer.toggle()">EDITAR</button>
+        <button mat-button (click)="onDelete(product.id)">ELIMINAR</button>
       </mat-card-actions>
     </mat-card>
   </div>
