--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,26 +1,33 @@
-<p>login works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>LOGIN</mat-card-title>
+  </mat-card-header>
 
-<!-- <div style="display: flex; flex-direction: column;">
-  <form (ngSubmit)="enviar2(form)"  #form="ngForm">
-    Username:<input type="text" name="username" ngModel><br>
-    Password: <input type="password" name="password" ngModel>
-    <button type="submit">LOGIN</button>
-  </form>
-</div> -->
+  <mat-card-content>
+    <form #form="ngForm" style="display: flex; flex-direction: column;">
+      <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input matInput type="text" #emailUI="ngModel" required ngModel name="email">
+      </mat-form-field>
 
+      <div *ngIf="emailUI.invalid && (emailUI.touched || emailUI.dirty)" class="alert alert-danger">
+        <div *ngIf="emailUI.errors.required">
+          NAME IS REQUIRED
+        </div>
+      </div>
+      <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" #passwordUI="ngModel" required name="password" ngModel>
+      </mat-form-field>
 
-<input class="form-control" type="text" minlength="3" maxlength="5" required #name="ngModel" ngModel>
-<div *ngIf="name.invalid && (name.touched || name.dirty)" class="alert alert-danger">
-
-  <div *ngIf="name.errors.required">
-    this field is required
-  </div>
-  <div *ngIf="name.errors.minlength">
-    Must be 3 characters
-  </div>
-  <div *ngIf="name.errors.maxlength">
-    at least 5 characters
-  </div>
-</div>
-
-<button (click)="goTicket()">Go Tickets</button>
+      <div *ngIf="passwordUI.invalid && (passwordUI.touched || passwordUI.dirty)" class="alert alert-danger">
+        <div *ngIf="passwordUI.errors.required">
+          PASSWORD IS REQUIRED
+        </div>
+      </div>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button [disabled]="form.invalid" (click)="onLogin(form)">Log in</button>
+  </mat-card-actions>
+</mat-card>
