--- a/src/app/pages1/home/home/home.component.html
+++ b/src/app/pages1/home/home/home.component.html
@@ -12,7 +12,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>COMPRAR</button>
+        <button mat-button (click)="onComprar(product)">COMPRAR</button>
       </mat-card-actions>
     </mat-card>
   </div>
