--- a/src/app/pages1/pages1/pages1.component.html
+++ b/src/app/pages1/pages1/pages1.component.html
@@ -16,7 +16,7 @@
         <a class="nav-link" routerLinkActive="active" routerLink="list">List</a>
       </li>
     </ul>
-    <button routerLink="/login">LOGOUT</button>
+    <button (click)="onLogout();">LOGOUT</button>
   </div>
 </nav>
 
