--- a/src/app/pages1/home/home/home.component.html
+++ b/src/app/pages1/home/home/home.component.html
@@ -1,3 +1,39 @@
+
+<mat-drawer-container class="example-container" style="width: 100%; height: 600px">
+  <mat-drawer #drawer class="example-sidenav" mode="side" style="width: 300px; height: 100%;" [position]="'end'">
+
+<div style="display: flex; flex-direction: column;">
+  <table>
+    <tr>
+      <td>NAME</td>
+      <td>PRICE</td>
+
+    </tr>
+    <tr *ngFor="let product of cart">
+      <td>{{product.title}}</td>
+      <td>{{product.price}} Bs.</td>
+
+    </tr>
+  </table>
+CANTIDAD<br>
+  <table>
+    <tr>
+      <td>TOTAL</td>
+    </tr>
+    <tr>
+      <td>{{total}}</td>
+    </tr>
+  </table>
+
+</div>
+</mat-drawer>
+
+<div class="example-sidenav-content">
+  <button type="button" mat-button (click)="drawer.toggle()">
+    Carrito
+  </button>
+</div>
+
 <div class="row">
   <div *ngFor="let product of products" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4" style="padding: 50px; display: flex; justify-content: center;">
     <mat-card class="example-card">
